# hvstrip-progressive

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  THIRD_PARTY.md  hvstrip_run.bat  plan.md  pyproject.toml  requirements.txt  run_gui.bat  setup.py
HV_In/: Best_Profile_Report.py  HV_In_Batch_Modeling.py  HV_In_Forward_Modeling.py  compare_hv_curves.py  extracted_curve.tsv  hv_peel_layers.py  run_compare_hv.py  run_hv_batch_example.py
HV_In/example/: Redfield_rho.txt  Redfield_vp.txt  Redfield_vs.txt  test_dinver_output.txt
HV_In/hvstrip_progressive2/: __init__.py  run_batch_research.py
HV_Strip_Progressive/: __init__.py  local_config.example.py  state.py  strip_window.py
HV_Strip_Progressive/api/: __init__.py  analysis.py  batch_engine.py  config.py  dual_resonance_ops.py  export.py  forward_engine.py  peak_ops.py  profile_io.py  report_ops.py  session_io.py  strip_engine.py  validation.py
HV_Strip_Progressive/core/: dual_resonance.py  peak_detection.py  report_generator.py  soil_profile.py  velocity_utils.py
HV_Strip_Progressive/dialogs/: auto_peak_settings_dialog.py  batch_settings_dialog.py  dual_resonance_dialog.py  dual_resonance_settings_dialog.py  engine_settings_dialog.py  figure_settings_panels.py  figure_studio.py  figure_wizard_dialog.py  output_viewer_dialog.py  peak_picker_dialog.py  profile_loader_dialog.py  settings_window.py
HV_Strip_Progressive/gui/: __init__.py  strip_window.py
HV_Strip_Progressive/pages/: forward_modeling_page.py  home_page.py  settings_page.py  visualization_page.py
examples/: example_model.txt  run_example.py
examples/soil_profile/: README.md  (+1 more)
new package/: .gitignore  API_DOCUMENTATION.md  GUI_ENHANCEMENTS.md  HVSR-MCP-Development-Prompt.md  HVSR-MCP-Resources-Guide.md  QUICKSTART.md  USAGE_EXAMPLES.md  batch_test.py  generate_pdf_report.py  generate_visualizations.py  parse_soil_profiles.py  run_full_analysis.py  setup.py  test_hvf.py
tests/: conftest.py  test_dual_resonance.py  test_engines.py  test_gui_enhancements.py  test_multi_profile.py  test_pyqt5_gui.py  test_soil_profile.py  test_velocity_utils.py
(+721 files in other folders)
